--- a/assignment1/Test.ipynb
+++ b/assignment1/Test.ipynb
@@ -2,197 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2. -2. -2.]\n",
-      "[4. 4. 4.]\n",
-      "12.0\n",
-      "3.4641016151377544\n",
-      "[2 1 0]\n",
-      "[2 1 0]\n"
+      "[[0 0 0]\n",
+      " [1 1 1]]\n",
+      "[[5 5 5]\n",
+      " [1 1 1]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[0., 1., 2.], [7., 5., 3.], [2., 3., 4.], [3., 4., 5.]])\n",
-    "b = np.array([[0,1,2], [2, 3, 4]])\n",
-    "c = [] #np.zeros((4,1))\n",
-    "d = []\n",
-    "c = a[0,:] - b[1,:]\n",
-    "d = np.square(c)    \n",
-    "e = np.sum(d)\n",
-    "f = np.sqrt(e)    \n",
-    "print(c)\n",
-    "print(d)\n",
-    "print(e)\n",
-    "print(f)\n",
-    "ids = np.argsort(a[1])\n",
-    "print(ids)\n",
-    "print(ids[:3])"
+    "a = np.array([[0,0,0],[1,1,1]])\n",
+    "print(a)\n",
+    "a[0,:] = 5\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 4 5 2 1]\n",
-      "{0: 3, 1: 4, 2: 5, 3: 2, 4: 1}\n",
-      "3\n",
-      "4\n",
-      "2\n"
+      "[ 2  4  0 10  8]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([0, 3, 2, 1,2, 1, 2, 1, 2, 2, 0, 0, 1, 3, 4])\n",
-    "unique, counts = np.unique(a, return_counts=True)\n",
-    "b = dict(zip(unique, counts))\n",
-    "id = np.argmax(counts)\n",
-    "print(counts)\n",
-    "print(b)\n",
-    "print(b[0])\n",
-    "print(b[1])\n",
-    "print(id)"
+    "mask = np.random.choice(12, 5, replace=False)\n",
+    "print(mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,4) (2,4) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-09ca04567b59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,4) (2,4) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 5]\n",
+      "[1 4 5]\n",
+      "[2 2]\n",
+      "[2 2]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "a = np.array([[1, 2, 3, 7], [1, 2, 3, 5], [1, 2, 3, 1]])\n",
-    "b = np.array([[1, 2, 3, 7], [1, 2, 3, 5]])\n",
-    "c = a-b\n",
+    "a = np.array([[1,2], [3, 4], [5, 6]])\n",
     "\n",
-    "print(b)\n",
-    "print(c)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3 7]\n",
-      " [1 2 3 5]]\n",
-      "[[1 2 3 7]\n",
-      " [1 2 3 5]]\n",
-      "[[1 2 3 7]\n",
-      " [1 2 3 5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.array([[1, 2, 3, 7], [1, 2, 3, 5], [1, 2, 3, 1]])\n",
+    "# An example of integer array indexing.\n",
+    "# The returned array will have shape (3,) and\n",
+    "print(a[[0, 1, 2], [0, 1, 0]])  # Prints \"[1 4 5]\"\n",
     "\n",
-    "for i in range (3):\n",
-    "    print(a[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([1, 2, 3, 4]), array([5, 6, 7]), array([ 8,  9, 10])]\n",
-      "3\n",
-      "[array([1, 2, 3, 4]) array([ 8,  9, 10])]\n",
-      "[[array([1, 2, 3, 4])]\n",
-      " [array([ 8,  9, 10])]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.array([1,2,3,4,5,6,7,8,9,10])\n",
-    "b = np.array_split(a,3)\n",
-    "c = np.delete(b, 1, 0)\n",
+    "# The above example of integer array indexing is equivalent to this:\n",
+    "print(np.array([a[0, 0], a[1, 1], a[2, 0]]))  # Prints \"[1 4 5]\"\n",
     "\n",
-    "print(b)\n",
-    "print(b[0][2])\n",
-    "print(c)\n",
-    "c = np.reshape(c,(-1,1))\n",
-    "print(c)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'one': array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]), 'two': 2, 'three': 3, 4: 5}\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([1,2,3,4,5,6,7,8,9,10])\n",
-    "kt = {}\n",
-    "kt = {'one': a, 'two': 2, 'three': 3}\n",
-    "i = 4\n",
-    "kt[i] = 5\n",
-    "print(kt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'apple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-a905cb233d05>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfruitdict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'apple'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'banana'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'carrot'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mfruitdict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 'apple'"
-     ]
-    }
-   ],
-   "source": [
-    "fruitdict = {}\n",
-    "for i in ('apple', 'banana', 'carrot'):\n",
-    "    fruitdict[i] = locals()[i]"
+    "# When using integer array indexing, you can reuse the same\n",
+    "# element from the source array:\n",
+    "print(a[[0, 0], [1, 1]])  # Prints \"[2 2]\"\n",
+    "\n",
+    "# Equivalent to the previous integer array indexing example\n",
+    "print(np.array([a[0, 1], a[0, 1]]))  # Prints \"[2 2]\""
    ]
   },
   {
