SVM vectorized done

--- a/assignment1/Test.ipynb
+++ b/assignment1/Test.ipynb
@@ -2,26 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0]\n",
-      " [1 1 1]]\n",
-      "[[5 5 5]\n",
-      " [1 1 1]]\n"
+      "[[0 4 5]\n",
+      " [1 6 7]\n",
+      " [8 1 9]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]]\n",
+      "[[ 0  4  5]\n",
+      " [ 0  5  6]\n",
+      " [ 6 -1  7]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[0,0,0],[1,1,1]])\n",
+    "a = np.array([[0,4,5],[1,6,7],[8,1,9]])\n",
+    "b = np.array([[0],[1],[2]])\n",
     "print(a)\n",
-    "a[0,:] = 5\n",
-    "print(a)"
+    "print(b)\n",
+    "c = a-b\n",
+    "print(c)"
    ]
   },
   {
@@ -33,48 +40,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  4  0 10  8]\n"
+      "[4, -3, 5, -7, -6, -8]\n",
+      "[4 0 5 0 0 0]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "mask = np.random.choice(12, 5, replace=False)\n",
-    "print(mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 4 5]\n",
-      "[1 4 5]\n",
-      "[2 2]\n",
-      "[2 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([[1,2], [3, 4], [5, 6]])\n",
-    "\n",
-    "# An example of integer array indexing.\n",
-    "# The returned array will have shape (3,) and\n",
-    "print(a[[0, 1, 2], [0, 1, 0]])  # Prints \"[1 4 5]\"\n",
-    "\n",
-    "# The above example of integer array indexing is equivalent to this:\n",
-    "print(np.array([a[0, 0], a[1, 1], a[2, 0]]))  # Prints \"[1 4 5]\"\n",
-    "\n",
-    "# When using integer array indexing, you can reuse the same\n",
-    "# element from the source array:\n",
-    "print(a[[0, 0], [1, 1]])  # Prints \"[2 2]\"\n",
-    "\n",
-    "# Equivalent to the previous integer array indexing example\n",
-    "print(np.array([a[0, 1], a[0, 1]]))  # Prints \"[2 2]\""
+    "a = [4, -3, 5, -7, -6, -8]\n",
+    "max = np.maximum(0,a)\n",
+    "print(a)\n",
+    "print(max)\n"
    ]
   },
   {
