--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -409,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive loss: 9.407226e+00 computed in 0.166000s\n",
-      "Vectorized loss: 0.000000e+00 computed in 0.000999s\n",
-      "difference: 9.407226\n"
+      "Naive loss: 8.516559e+00 computed in 0.118918s\n",
+      "Vectorized loss: 8.516559e+00 computed in 0.002000s\n",
+      "difference: 0.000000\n"
      ]
     }
    ],
@@ -442,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive loss and gradient: computed in 0.140129s\n",
-      "Vectorized loss and gradient: computed in 0.000000s\n",
-      "difference: 3431.034917\n"
+      "Naive loss and gradient: computed in 0.123927s\n",
+      "Vectorized loss and gradient: computed in 0.004002s\n",
+      "difference: 1628770.167968\n"
      ]
     }
    ],
