--- a/assignment1/Test.ipynb
+++ b/assignment1/Test.ipynb
@@ -2,62 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 4 5]\n",
-      " [1 6 7]\n",
-      " [8 1 9]]\n",
-      "[[0]\n",
-      " [1]\n",
-      " [2]]\n",
-      "[[ 0  4  5]\n",
-      " [ 0  5  6]\n",
-      " [ 6 -1  7]]\n"
+      "[[1 0]\n",
+      " [0 1]]\n",
+      "[1 2]\n",
+      "[1 2]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[0,4,5],[1,6,7],[8,1,9]])\n",
-    "b = np.array([[0],[1],[2]])\n",
+    "a = np.array([[1,0],[0,1]])\n",
+    "b = np.array([1,2])\n",
     "print(a)\n",
     "print(b)\n",
-    "c = a-b\n",
+    "c = np.matmul(a, b)\n",
     "print(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, -3, 5, -7, -6, -8]\n",
-      "[4 0 5 0 0 0]\n"
+      "{(5, 2): (0.5, 0.6)}\n"
      ]
     }
    ],
    "source": [
-    "a = [4, -3, 5, -7, -6, -8]\n",
-    "max = np.maximum(0,a)\n",
-    "print(a)\n",
-    "print(max)\n"
+    "import numpy as np\n",
+    "a = np.array([[5,0],[7,3]])\n",
+    "b = np.amax(a,0)\n",
+    "lr = 5\n",
+    "reg = 2\n",
+    "dic = {}\n",
+    "dic[(lr,reg)] = (0.5, 0.6)\n",
+    "print(dic)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
