--- a/assignment1/Test.ipynb
+++ b/assignment1/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,19 +11,17 @@
      "text": [
       "[[1 0]\n",
       " [0 1]]\n",
-      "[1 8]\n",
-      "8\n"
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "a = np.array([[1,0],[0,1]])\n",
-    "b = np.array([1,8])\n",
+    "b = np.zeros(a.shape)\n",
     "print(a)\n",
-    "print(b)\n",
-    "c = a[0,0]*b[1]\n",
-    "print(c)"
+    "print(b)\n"
    ]
   },
   {
