--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -170,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_backward function:\n",
+      "dx error:  5.399100368651805e-11\n",
+      "dw error:  9.904211865398145e-11\n",
+      "db error:  2.4122867568119087e-11\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_backward function\n",
     "np.random.seed(231)\n",
@@ -205,9 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_forward function:\n",
+      "difference:  4.999999798022158e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
@@ -233,9 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_backward function:\n",
+      "dx error:  3.2756349136310288e-12\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "x = np.random.randn(10, 10)\n",
@@ -283,9 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward and affine_relu_backward:\n",
+      "dx error:  6.750562121603446e-11\n",
+      "dw error:  8.162015570444288e-11\n",
+      "db error:  7.826724021458994e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "np.random.seed(231)\n",
@@ -320,9 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss:  8.999602749096233\n",
+      "dx error:  1.4021566006651672e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.302545844500738\n",
+      "dx error:  9.384673161989355e-09\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "num_classes, num_inputs = 10, 50\n",
@@ -358,9 +412,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Problem with regularization loss",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-8131727ae778>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrads\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[0mcorrect_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m26.5948426952\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mcorrect_loss\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m1e-10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Problem with regularization loss'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;31m# Errors should be around e-7 or less\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Problem with regularization loss"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D, H, C = 3, 5, 50, 7\n",
