--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -2,34 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "((1, 2, 3), (5, 6))\n",
-      "2\n"
+      "(2, 3)\n",
+      "(3,)\n",
+      "[[ 1  6 15]\n",
+      " [ 1  6 35]]\n",
+      "[[101 306 515]\n",
+      " [101 306 535]]\n"
      ]
     }
    ],
    "source": [
-    "a = (1,2,3)\n",
-    "c = (5,6)\n",
-    "b = (a,c)\n",
-    "\n",
-    "print(a[0])\n",
-    "print(a[1])\n",
-    "print(b)\n",
-    "print(b[0][1])"
+    "import numpy as np\n",
+    "a = np.array([[1,2,3],[1,2,7]])\n",
+    "b = np.mean(a, axis=0)\n",
+    "c = np.array([1, 3, 5])\n",
+    "d = a*c\n",
+    "e = np.array([100, 300, 500])\n",
+    "f = d+e\n",
+    "print(a.shape)\n",
+    "print(c.shape)\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +50,6 @@
     "a[4]=1\n",
     "print(a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
