--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,9 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.7029241291468676e-09\n",
+      "dgamma error:  7.420414216247087e-13\n",
+      "dbeta error:  2.8795057655839487e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient check batchnorm backward pass\n",
     "np.random.seed(231)\n",
