--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -2,54 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3)\n",
-      "(3,)\n",
-      "[[ 1  6 15]\n",
-      " [ 1  6 35]]\n",
-      "[[101 306 515]\n",
-      " [101 306 535]]\n"
+      "[[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[1,2,3],[1,2,7]])\n",
-    "b = np.mean(a, axis=0)\n",
-    "c = np.array([1, 3, 5])\n",
-    "d = a*c\n",
-    "e = np.array([100, 300, 500])\n",
-    "f = d+e\n",
-    "print(a.shape)\n",
-    "print(c.shape)\n",
-    "print(d)\n",
-    "print(f)"
+    "a = np.ones((3,2))\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[None, None, None, None, 1]\n"
+      "32\n",
+      "[ 4 10 18]\n"
      ]
     }
    ],
    "source": [
-    "a=[None]*5\n",
-    "a[4]=1\n",
-    "print(a)"
+    "import numpy as np\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "c = np.matmul(a,b)\n",
+    "print(c)\n",
+    "d = np.multiply(a,b)\n",
+    "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[32  0]\n",
+      "[[ 4 10 18]\n",
+      " [ 0  0  0]]\n",
+      "[[ 4 10 18]\n",
+      " [ 0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a =  np.array([[1,2,3], [0,0,0]]) \n",
+    "b = np.array([4,5,6])\n",
+    "c = np.matmul(a,b)\n",
+    "print(c)\n",
+    "d = np.multiply(b,a)\n",
+    "e = b*a\n",
+    "print(d)\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
