--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -2,99 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1.]\n",
-      " [1. 1.]\n",
-      " [1. 1.]]\n"
+      "[0.1 0.2 0.  0.4 0. ]\n",
+      "[0.49346557 0.11411982 0.75434175 0.17423064 0.57462687]\n",
+      "[ True  True False  True False]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.ones((3,2))\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n",
-      "[ 4 10 18]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = [1,2,3]\n",
-    "b = [4,5,6]\n",
-    "c = np.matmul(a,b)\n",
-    "print(c)\n",
-    "d = np.multiply(a,b)\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[32  0]\n",
-      "[[ 4 10 18]\n",
-      " [ 0  0  0]]\n",
-      "[[ 4 10 18]\n",
-      " [ 0  0  0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a =  np.array([[1,2,3], [0,0,0]]) \n",
-    "b = np.array([4,5,6])\n",
-    "c = np.matmul(a,b)\n",
-    "print(c)\n",
-    "d = np.multiply(b,a)\n",
-    "e = b*a\n",
-    "print(d)\n",
-    "print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(5, -1, -1):\n",
-    "    print(i)"
+    "\n",
+    "p = 0.5\n",
+    "a = np.array([0.1, 0.2, 0.3, 0.4, 0.5])\n",
+    "#b = np.random.rand(*a.shape)\n",
+    "b = np.random.rand(5)\n",
+    "\n",
+    "c = b < p\n",
+    "a *= c\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
    ]
   },
   {
