--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -32,6 +32,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I have two number 5, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=3\n",
+    "print('\\nI have two number {}, {}'.format(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
