--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -2,52 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.1 0.2 0.  0.4 0. ]\n",
-      "[0.49346557 0.11411982 0.75434175 0.17423064 0.57462687]\n",
-      "[ True  True False  True False]\n"
+      "[[[0 0 0 0 0 0 0 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 0 0 0 0 0]\n",
+      "  [0 0 1 2 3 4 5 0]\n",
+      "  [0 0 1 2 3 4 5 0]\n",
+      "  [0 0 1 2 3 4 5 0]\n",
+      "  [0 0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 0 0 0 0 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 1 1 2 2 3 4 0]\n",
+      "  [0 0 0 0 0 0 0 0]]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nprint( 'constant:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'constant')))\\nprint 'edge:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'edge'))\\nprint 'linear_ramp:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'linear_ramp'))\\nprint 'maximum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'maximum'))\\nprint 'mean:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'mean'))\\nprint 'median:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'median'))\\nprint 'minimum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'minimum'))\\nprint 'reflect:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'reflect'))\\nprint 'symmetric:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'symmetric'))\\nprint 'wrap:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'wrap'))\\n\""
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "p = 0.5\n",
-    "a = np.array([0.1, 0.2, 0.3, 0.4, 0.5])\n",
-    "#b = np.random.rand(*a.shape)\n",
-    "b = np.random.rand(5)\n",
-    "\n",
-    "c = b < p\n",
-    "a *= c\n",
-    "print(a)\n",
+    "arr3D = np.array([[[1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4]], \n",
+    "                  [[0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4, 5]], \n",
+    "                  [[1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4]]])\n",
+    "b = np.pad(arr3D, ((0, 0), (1, 1), (1, 1)), 'constant')     \n",
     "print(b)\n",
-    "print(c)"
+    "\"\"\"\n",
+    "print( 'constant:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'constant')))\n",
+    "print 'edge:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'edge'))\n",
+    "print 'linear_ramp:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'linear_ramp'))\n",
+    "print 'maximum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'maximum'))\n",
+    "print 'mean:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'mean'))\n",
+    "print 'median:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'median'))\n",
+    "print 'minimum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'minimum'))\n",
+    "print 'reflect:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'reflect'))\n",
+    "print 'symmetric:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'symmetric'))\n",
+    "print 'wrap:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'wrap'))\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "I have two number 5, 3\n"
+      "[1 2]\n"
      ]
     }
    ],
    "source": [
-    "a=5\n",
-    "b=3\n",
-    "print('\\nI have two number {}, {}'.format(a,b))"
+    "a=np.array([1,2,3,4,5])\n",
+    "print(a[0:2])"
    ]
   },
   {
