--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -2,81 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0 0 0 0 0 0 0 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 0 0 0]\n",
-      "  [0 0 1 2 3 4 5 0]\n",
-      "  [0 0 1 2 3 4 5 0]\n",
-      "  [0 0 1 2 3 4 5 0]\n",
-      "  [0 0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 0 0 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 1 1 2 2 3 4 0]\n",
-      "  [0 0 0 0 0 0 0 0]]]\n"
+      "[[ 3  4 70  4]\n",
+      " [ 1  2  3 12]]\n",
+      "[[ 2.   3.  36.5  8. ]]\n",
+      "(1, 4)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nprint( 'constant:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'constant')))\\nprint 'edge:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'edge'))\\nprint 'linear_ramp:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'linear_ramp'))\\nprint 'maximum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'maximum'))\\nprint 'mean:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'mean'))\\nprint 'median:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'median'))\\nprint 'minimum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'minimum'))\\nprint 'reflect:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'reflect'))\\nprint 'symmetric:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'symmetric'))\\nprint 'wrap:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'wrap'))\\n\""
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "arr3D = np.array([[[1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4]], \n",
-    "                  [[0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4, 5]], \n",
-    "                  [[1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4], [1, 1, 2, 2, 3, 4]]])\n",
-    "b = np.pad(arr3D, ((0, 0), (1, 1), (1, 1)), 'constant')     \n",
+    "a = np.array([[3,4,70,4],[1,2,3,12]])\n",
+    "print(a)\n",
+    "b = np.mean(a, axis=0, keepdims=True)\n",
     "print(b)\n",
-    "\"\"\"\n",
-    "print( 'constant:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'constant')))\n",
-    "print 'edge:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'edge'))\n",
-    "print 'linear_ramp:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'linear_ramp'))\n",
-    "print 'maximum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'maximum'))\n",
-    "print 'mean:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'mean'))\n",
-    "print 'median:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'median'))\n",
-    "print 'minimum:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'minimum'))\n",
-    "print 'reflect:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'reflect'))\n",
-    "print 'symmetric:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'symmetric'))\n",
-    "print 'wrap:  \\n' + str(np.pad(arr3D, ((0, 0), (1, 1), (2, 2)), 'wrap'))\n",
-    "\"\"\"\n"
+    "print(b.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2]\n"
+      "(1, 2, 3, 4)\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "a=np.array([1,2,3,4,5])\n",
-    "print(a[0:2])"
+    "import numpy as np\n",
+    "a = (1,2,3)\n",
+    "b = 4\n",
+    "c = (a[0],a[1],a[2],b)\n",
+    "print(c)\n",
+    "print(c[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
