--- a/assignment2/test.ipynb
+++ b/assignment2/test.ipynb
@@ -9,25 +9,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3  4 70  4]\n",
-      " [ 1  2  3 12]]\n",
-      "[[ 2.   3.  36.5  8. ]]\n",
-      "(1, 4)\n"
+      "[[[[ 3.  4.  3.]\n",
+      "   [ 1. 12.  4.]]\n",
+      "\n",
+      "  [[ 3.  4.  3.]\n",
+      "   [ 1. 12.  4.]]]]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[3,4,70,4],[1,2,3,12]])\n",
-    "print(a)\n",
-    "b = np.mean(a, axis=0, keepdims=True)\n",
-    "print(b)\n",
-    "print(b.shape)"
+    "a = np.array([[3,4,3],[1,12,4]])\n",
+    "b = np.array([[3],[1]])\n",
+    "gamma, beta = np.ones((1,2,1,1)), np.zeros((1,2,1,1))\n",
+    "c = a*gamma\n",
+    "print(c)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
